@@ -18,6 +18,7 @@
 
 #define outsize(args...) do {if (!out_size(args)) return_0;} while (0)
 #define outhint(args...) do {if (!out_hint(args)) return_0;} while (0)
+#define outfc(args...) do {if (!out_text_with_comment(args)) return_0;} while (0)
 #define outf(args...) do {if (!out_text(args)) return_0;} while (0)
 #define outnl(f) do {if (!out_newline(f)) return_0;} while (0)
 
@@ -38,6 +39,9 @@ int out_config_node(struct formatter *f, const struct config_node *cn);
 
 int out_areas(struct formatter *f, const struct lv_segment *seg,
 	      const char *type);
+
+int out_text_with_comment(struct formatter *f, const char* comment, const char *fmt, ...)
+    __attribute__ ((format(printf, 3, 4)));
 
 void out_inc_indent(struct formatter *f);
 void out_dec_indent(struct formatter *f);
